--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
+    "preDeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
